# purrject

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
example/: purrject.toml
example/doc/: api.md  auth.md  cache.md  db.md  gateway.md  logger.md  mod2.md  scheduler.md  utils.md  web.md
example/modules/api/: purrject.toml
example/modules/auth/: purrject.toml
example/modules/cache/: purrject.toml
example/modules/db/: purrject.toml
example/modules/gateway/: purrject.toml
example/modules/logger/: purrject.toml
example/modules/mod1/: purrject.toml
example/modules/mod2/: purrject.toml
example/modules/scheduler/: purrject.toml
example/modules/utils/: purrject.toml
example/modules/web/: purrject.toml
purrject-dev/: SKILL.md
purrject-dev/Reference/: command.md  document_spec.md  purrject_toml.md
src/: __init__.py  cli.py  config.py  display.py  errors.py  graph.py  models.py
src/Purrject/: Program.cs  Purrject.csproj
src/Purrject/Commands/: AddCommand.cs  DepsCommand.cs  GraphCommand.cs  InitCommand.cs  ListCommand.cs  ShowCommand.cs  TreeCommand.cs
src/Purrject/Exceptions/: PurrjectException.cs
src/Purrject/Services/: ConfigService.cs  GraphService.cs
