[project]
name = "purrject"
version = "0.1.0"
description = "A CLI tool for analyzing project module structures"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
purrject = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
